<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="16dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/name_food"
                    android:layout_marginTop="20sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_above="@id/img_item_photo"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="170dp"
                    android:layout_height="190dp"
                    android:layout_marginBottom="4dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_item_khas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                tools:text="@string/provinsi_food"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                app:cardCornerRadius="4dp"
                android:layout_below="@id/tv_item_khas">


                <TextView
                    android:id="@+id/tv_item_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/detail"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/info"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@id/info"
                app:cardCornerRadius="4dp">


                <TextView
                    android:id="@+id/tv_item_jenis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jenis"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>




    </LinearLayout>


</ScrollView>